--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -26,11 +26,11 @@
             <p> Le nom de domaine williamlibelin.fr est la propriété De William Libelin <br> Domicilé au<br><address>39 rue Fleury<br>69600 OULLINS-PIERRE-BENITE<br></address></p>
 
             <h3> Développeur et Webmaster </h3>
-            <p> Le présent site internet a été réalisé pour l'usage exclusif de M William Libelin par <a class="lightAnchor" href="www.linkedin.com/in/marylou-colombier-22a409a8">Mme Marylou Colombier</a>
+            <p> Le présent site internet a été réalisé pour l'usage exclusif de M William Libelin par <a class="lightAnchor" href="https://www.linkedin.com/in/marylou-colombier-22a409a8/">Mme Marylou Colombier</a>
             <br>Pour toute réclamation concernant le contenu du présent site internet, <a class="lightAnchor" href="index.html#contactinfo">s'adresser à M William Libelin</a></p>
 
             <h3> Hébergement </h3>
-            <p> Le site web est hébergé gratuitement via le service de <a class="lightAnchor" href="https://pages.github.com/">GitHub Pages</a> par <a class="lightAnchor" href="www.linkedin.com/in/marylou-colombier-22a409a8">Mme Marylou Colombier</a>
+            <p> Le site web est hébergé gratuitement via le service de <a class="lightAnchor" href="https://pages.github.com/">GitHub Pages</a> par <a class="lightAnchor" href="https://www.linkedin.com/in/marylou-colombier-22a409a8/">Mme Marylou Colombier</a>
 
             <h3>Crédits Photos</h3>
             <p>Les photos ont été réalisé pour l'usage exclusif de M William Libelin par <a class="lightAnchor" href="https://www.noemieallardet.fr/">Mme Noémie Allardet</a></p>
