--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -33,7 +33,7 @@
             <p> Le site web est hébergé gratuitement via le service de <a class="lightAnchor" href="https://pages.github.com/">GitHub Pages</a> par <a class="lightAnchor" href="https://www.linkedin.com/in/marylou-colombier-22a409a8/">Mme Marylou Colombier</a>
 
             <h3>Crédits Photos</h3>
-            <p>Les photos ont été réalisé pour l'usage exclusif de M William Libelin par <a class="lightAnchor" href="https://www.noemieallardet.fr/">Mme Noémie Allardet</a></p>
+            <p>Les photos ont été réalisées pour l'usage exclusif de M William Libelin par <a class="lightAnchor" href="https://www.noemieallardet.fr/">Mme Noémie Allardet</a></p>
 
             <h3>Crédits Vidéos</h3>
 
